testing fix to issue where margins for the card holder div (container in cardFunctions module) caused it tno not look so good on mobile

--- a/src/components/CardFunctions.module.css
+++ b/src/components/CardFunctions.module.css
@@ -25,8 +25,8 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    margin-top: 5.44vh;
-    margin-bottom: 5.44vh;
+    /* margin-top: 5.44vh; */
+    /* margin-bottom: 5.44vh; */
 }
 
 .card {
